Creating homepage components

--- a/vgmd/client/index.ejs
+++ b/vgmd/client/index.ejs
@@ -1,11 +1,17 @@
+<!-- client/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Expense Manager</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/App.css"></link>
+    <title>Video Game Music</title>
   </head>
+
   <body>
-    <h1>Expense Manager</h1>
     <div id="root"></div>
-</body>
+  </body>
+
+  <script src="bundle.js"></script>
+  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </html>
